fix ui layout z-index

--- a/test/dummy/app/cells/dummy/ui/footer/footer.sass
+++ b/test/dummy/app/cells/dummy/ui/footer/footer.sass
@@ -3,6 +3,8 @@
   background: $light-gray
   margin-top: map-get($spacers, gg)
   padding-top: map-get($spacers, gg)
+  z-index: 1
+  position: relative
 
   .f-newsletter-subscriptions-form__message
     align-items: flex-start
